versioned_docs/version-4/studio.mdx
---
title: Welcome to the Stately docs
---
<p></p>

:::warning

**Docs for XState v4 are no longer maintained** 

This page is no longer maintained as [XState V5 has been released](/blog/2023-12-01-xstate-v5).

[Jump to the XState v5 homepage](/docs/xstate).

:::

# Welcome to the Stately docs

Here you can find all the documentation for the Stately Studio and [XState](/xstate/intro.mdx). There are a few ways you might want to get started:

<ul className="content-boxes">
  <li>
    <a className="link-box" href="./states/intro">
      🏁 <strong>Get started</strong> Jump straight into learning how to use the
      editor, starting with states.
    </a>
  </li>
  <li>
    <a className="link-box" href="#stately-studios-editor">
      ⬇️ <strong>Editor overview</strong> Keep reading to find out more about
      Stately Studio’s editor.
    </a>
  </li>
  <li>
    <a className="link-box" href="./state-machines-and-statecharts">
      🧠 <strong>Learn state machines and statecharts</strong> With our no-code
      introduction.
    </a>
  </li>
  <li>
    <a className="link-box" href="./xstate">
      💻 <strong>Learn XState</strong> Get started with our JavaScript and
      TypeScript library for state machines and statecharts.
    </a>
  </li>
</ul>

Stately Studio is a suite of tools for building app logic, including the Editor, [developer tools for XState](/tools/developer-tools.mdx), and much more coming soon.

<p>
  <ThemedImage
    alt="A dog walk machine open in Stately Studio’s editor. The dog walk machine has cute puppy images for each state, showing a dog walking and running. The speed up event is selected, and information and options for that transition is shown in an inspector panel on the right."
    sources={{
      light: '/studio.png',
      dark: '/studio-dm.png',
    }}
  />
</p>

You can use [Stately Studio’s editor](#stately-studios-editor) to model your logic using state machines and statecharts visually; no code required! Collaborate on your machines with coworkers and friends with [shared projects in teams](/#projects-and-teams). Use the [XState VS Code extension](/tools/xstate-vscode-extension.mdx) to use the editor with your codebase inside your code editor, or [export](/#export) your code from Stately Studio into your codebase.

:::tip

What are state machines and statecharts? We’re glad you asked! [Check out our no-code introduction to state machines and statecharts](state-machines-and-statecharts.mdx).

:::

## Stately Studio’s editor

Stately Studio’s editor supports everything you need to visually build state machines and statecharts. The editor currently has two modes; [**Design** mode](design-mode.mdx) for creating your machines and [**Simulate** mode](simulate-mode.mdx) for simulating how your machine works.

:::video

[Learn how to use Stately in our quick introduction video (7m36s)](https://www.youtube.com/watch?v=EzYIerEutgk).

:::

### Quick start tutorials

You can access quick start tutorials from the blue <HelpCircle size={12} /> Help button in the editor.

When you first visit the Editor, you’ll be shown two short videos (7m36s) as a quick start guide. You can access these videos again anytime from:

- Editor menu > Help > <GraduationCap size={12} /> **Learn Stately**.
- The <HelpCircle size={12} /> Help button > <GraduationCap size={12} /> **Learn Stately**.

### Projects and teams

<p>
  <ThemedImage
    alt="Stately Studio Projects page for the Voyager team, showing a list of four projects, one with public machines, two with private machines, and one with unlisted machines."
    sources={{
      light: '/projects.png',
      dark: '/projects-dm.png',
    }}
  />
</p>

As a [Pro user](https://stately.ai/pricing), you can create and join teams in Stately Studio to share your machines and collaborate on private team projects. [Read more about Projects](projects.mdx) and [Teams](teams.mdx).

<p>
  <ThemedImage
    alt="Stately Studio Team page for the Voyager team, showing Captain Janeway with the owner and Admin role, Commander Chakotay with an Admin role, Lieutenant Tuvok, Lieutenant Torres, and Lieutenant Paris with Editor roles, and Ensign Kim with a Viewer role."
    sources={{
      light: '/teams.png',
      dark: '/teams-dm.png',
    }}
  />
</p>

### Discover machines

Are you seeking inspiration for your machine? Or do you want to learn from how somebody else models their machines? The [Discover page](https://stately.ai/registry/discover) lists all the public machines created with Stately Studio. [Read more about the Discover page](discover.mdx).

<p>
  <ThemedImage
    alt="Stately Studio Discover page showing the search results for “auth”, filtered by editor machines under 10 states, showing 173 results."
    sources={{
      light: '/discover.png',
      dark: '/discover-dm.png',
    }}
  />
</p>

## Our roadmap

Do you want to request a feature in Stately Studio? [Check out our roadmap](https://feedback.stately.ai) to post your feature ideas and upvote other features. Our roadmap also shows you the features we have planned and those already in progress.

You can also keep up with the Stately team’s work in progress at our regular [office hour live streams](https://youtube.com/statelyai).
